# my_personal_assistant

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml
agent/: orchestrator.py  router.py
agent/subagents/: __init__.py  code.py  cron.py  file.py  github.py  note.py  research.py
auth/: chatgpt_oauth.py  chatgpt_pkce.py  claude_pkce.py  langchain_chatgpt.py  langchain_claude.py
backend/: app.py
cron/: scheduler.py
cron/jobs/: morning_briefing.py  user_job.py  weekly_report.py
docs/: capabilities.md  claude_oauth.md  review_qa.md  slides.md  study_guide.md  test_report.md
frontend/: app.py
mcp_server/: config.yaml  main.py
scripts/: get_google_token.py  start_mcp.sh  stop_mcp.sh
storage/: cron_jobs.py  db.py
templates/: notion_format.py
tests/: conftest.py  test_api.py  test_chatgpt_oauth.py  test_cost_tracker.py  test_frontend.py  test_memory.py  test_notes.py  test_notion_tools.py  test_tools_singleton.py
tools/: calendar_tools.py  changelog.py  conversations.py  cost_tracker.py  cron_tools.py  github_tools.py  local_file.py  memory.py  notes.py  notion_tools.py  papers.py  sandbox.py  search.py
utils/: logger.py  mcp_config.py
